# django-neural-feed

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements_dev.txt
.github/workflows/: main.yml  pypi-publish.yml
src/django_neural_feed/: __init__.py  apps.py  combined.txt  combined_output.txt  conf.py  encoders.py  exceptions.py  feeds.py  mixins.py  models.py  services.py  signals.py  tasks.py
src/django_neural_feed/migrations/: 0001_initial.py
tests/: conftest.py  feeds.py  models.py  settings.py  test_feeds_coverage.py  test_neural_architecture.py  test_recommendations.py  test_signals_coverage.py
tests/migrations/: 0001_initial.py  0001_vector_extension.py  __init__.py
