[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-neural-feed"
version = "1.0.0"
authors = [
    { name = "itsDersty" }
]
description = "Personalized content feeds using vector embeddings, pgvector, and hybrid database-level scoring."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "Django>=4.2",
    "numpy>=2.0.0",
    "pgvector>=0.4.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
celery = [
    "celery>=5.3.0",
]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "celery>=5.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["django_neural_feed*"]

[tool.coverage.run]
omit = [
    "*/migrations/*",
]